<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/organizer_gradient"


    android:orientation="vertical">

    <ScrollView
        android:id="@+id/activityOrgEventDetails"
        android:layout_width="417dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="1dp"
        android:background="@color/lightColor"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightColor">

                <Button
                    android:id="@+id/createEventButton"
                    android:layout_width="129dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="129dp"
                    android:layout_marginBottom="11dp"
...
