<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activityEventAttendeesInfo"
    tools:context=".uiReference.organizers.EventAttendeesInfoActivity"
    android:background="@color/lightColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="40px">

                <ImageButton
                    android:id="@+id/event_attendees_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    app:srcCompat="@drawable/back_arrow" />

...
