...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/organizer_details_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="#00000000"
                android:contentDescription="Back Button"
                android:src="@drawable/back_arrow" />
...
                                android:fontFamily="@font/inter_semibold"
                                android:text="@string/event_location"
                                android:textColor="@color/darkColor" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/event_attendees_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/accentColorGreen"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/view_attendees_button"
                            android:textColor="@color/lightColor"
...
